# OpenAI-SDK

./: context_openai_agents_sdk.ipynb
OpenAI-chatbot/: README.md  pyproject.toml  requirements.txt
OpenAI-chatbot/src/openai_chatbot/: __init__.py  app.py  main.py
OpenAI_hello_agent/asynch/hello_agent/: main.py  pyproject.toml
OpenAI_hello_agent/synch/hello_agent/: main.py
ai-hub-agent/: pyproject.toml
ai-hub-agent/src/ai_hub_agent/: __init__.py  app.py  app1.py  model.py
ai-hub-api/aihub_institute/: .env  hello.py  pyproject.toml
ai-hub-api/aihub_institute/app/: main.py
ai-hub-api/aihub_institute/app/core/: config.py  database.py  security.py  utils.py
ai-hub-api/aihub_institute/app/crud/: base.py
ai-hub-api/aihub_institute/app/models/: __init__.py  base.py  course.py  enrollment.py  role.py  student.py  user.py  user_role.py
ai-hub-api/aihub_institute/app/routes/: course_routes.py  enrollment_routes.py  role_routes.py  student_routes.py  user_role_routes.py  user_routes.py
ai-hub-api/aihub_institute/app/schemas/: user.py
ai-hub-institute/: app.py  hello.py  pyproject.toml
chainlit_template/: pyproject.toml  requirements.txt
chainlit_template/src/chainlit_template/: __init__.py  agents_as_tools.py  app.py  main.py
chatbot_template_UI/: app.py  hello.py  prompt_templates.txt  pyproject.toml
chatbot_template_UI/comp_agents/: admission_agent.py  ai_hub_agent_file.py  model_shared.py
chatbot_template_UI/comp_agents/schemas/: payment_schema.py
console_agent/: hello.py  pyproject.toml
