[project]
name = "ai-hub-agent"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mubashar-Bashir", email = "mubasharbashir003@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.5.5",
    "openai-agents[litellm]>=0.0.13",
]

[project.scripts]
ai-hub-agent = "ai_hub_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
